k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arma-events-public
spec:
  selector:
    app: arma-events-public
  ports:
  - port: 80
    targetPort: 80
