k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arma-events
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - arma.events
    secretName: arma-events-tls
  rules:
  - host: arma.events
    http:
      paths:
      - backend:
          serviceName: arma-events-public
          servicePort: 80
